<resources>
    <string name="app_name">RacZakup</string>

    <!-- fragment_login !-->
    <string name="frag_login_welcome_back">С возвращением!</string>
    <string name="frag_login_hint">Введите номер телефона,\n чтобы получить проверочный код</string>
    <string name="frag_login_button">Войти</string>
    <string name="frag_login_startPhone">+7</string>

    <!-- fragment_check_code !-->
    <string name="frag_check_checkCode">Проверочный код</string>
    <string name="frag_check_typeCheckCode">Введите проверочный код из СМС</string>

    <string name="toolbar_login">Вход</string>
    <string name="fast_order">Быстрый заказ</string>

    <!-- bottom navigation !-->
    <string name="bottom_navigation_main">Главная</string>
    <string name="bottom_navigation_packs">Наборы</string>
    <string name="bottom_navigation_kart">Корзина</string>
    <string name="bottom_navigation_profile">Профиль</string>

    <string name="search_hint">Поиск</string>

    <!-- КАТЕГОРИИ -->
    <string name="category_milk">Молочные\nпродукты</string>
    <string name="category_vegetables">Овощи и\nфрукты</string>
    <string name="category_grocery">Бакалея</string>
    <string name="category_meat">Мясная\nгастрономия</string>
    <string name="category_fish_seafood">Рыба и\nморепродукты</string>
    <string name="category_frozen">Замороженные\nпродукты</string>
    <string name="category_drinks">Напитки</string>
    <string name="category_nuts_dried">Орехи и\nсухофрукты</string>

    <!-- ПРОФИЛЬ -->
    <string name="profile_my_profile">Мой профиль</string>
    <string name="profile_my_orders">Мои заказы</string>
    <string name="profile_contacts">Контактные данные</string>
    <string name="profile_prefs_params">Мои физические данные\nи предпочтения</string>
    <string name="profile_groups">Группы</string>
    <string name="group">Группа</string>
    <string name="button_add_group">Добавить группу</string>
    <string name="profile_addresses">Адреса</string>
    <string name="button_add_address">Добавить адрес</string>
    <string name="phone_num">+7(%s%s%s)%s%s%s-%s%s-%s%s</string>


    <!-- РЕДАКТИРОВАНИЕ ГРУППЫ -->
    <string name="edit_group_toolbar">Редактирование\nгруппы</string>
    <string name="add_member_toolbar">Добавление\nучастника</string>
    <string name="add_group_toolbar">Добавление\nгруппы</string>
    <string name="edit_group_groupTitle">Название</string>
    <string name="edit_group_groupMembers">Участники</string>
    <string name="edit_group_groupPacks">Наборы этой группы</string>
    <string name="edit_group_buttonConfirm">Подтвердить\nизменения</string>
    <string name="edit_group_buttonDelete">Удалить группу</string>
    <string name="add_group">Создать группу</string>

    <!-- РЕДАКТИРОВАНИЕ УЧАСТНИКА -->
    <string name="edit_member_toolbar">Редактирование\nучастника</string>
    <string name="member_name">Имя</string>
    <string name="gender">Пол</string>
    <string name="male_gender">Мужской</string>
    <string name="female_gender">Женский</string>
    <string name="age">Возраст</string>
    <string name="height">Рост</string>
    <string name="weight">Вес</string>
    <string name="imt">ИМТ</string>
    <string name="imt_normal">Обычный</string>
    <string name="imt_bottom_normal">Дефицит</string>
    <string name="imt_above_normal">Предожирение</string>
    <string name="imt_above_predfat">Ожирение</string>
    <string name="lvl_active">Уровень активности</string>
    <string name="lvl_active_sitting">Сидячий</string>
    <string name="lvl_active_active">Активный</string>
    <string name="lvl_active_soActive">Очень активный</string>
    <string name="preferences">Предпочтения</string>
    <string name="less_milk">Поменьше молочных продуктов</string>
    <string name="without_milk">Исключить молочные продукты</string>
    <string name="without_meat">Исключить мясо</string>
    <string name="allergens">Аллергены</string>
    <string name="citruses">Цитрусы</string>
    <string name="strawberry">Клубника</string>
    <string name="nuts">Орехи</string>
    <string name="honey">Мёд</string>
    <string name="edit_member_buttonDelete">Удалить участника</string>

    <string name="create_member_toolbar">Создание\nучастника</string>
    <string name="add_member">Создать участника</string>

    <string name="dialog_delete_member">Вы уверены, что хотите удалить участника?</string>
    <string name="dialog_delete_group">Вы уверены, что хотите удалить группу?</string>
    <string name="yes">Да</string>
    <string name="cancel">Отменить</string>

    <!-- PACKS -->
    <string name="my_packs">Мои наборы</string>
    <string name="button_new_pack">Создать набор</string>
    <string name="no_pack">Вы не создали ни\nодного набора</string>

    <string name="how_many_people">На сколько человек закупка?</string>
    <string name="for_me">Заказать для себя</string>
    <string name="add_new_family">Добавить новую семью</string>
    <string name="how_many_days">Количество дней</string>
    <string name="budget">Бюджет закупки</string>
    <string name="budget_eco">Эконом</string>
    <string name="eco_rub">₽</string>
    <string name="budget_standard">Стандарт</string>
    <string name="standard_rub">₽₽</string>
    <string name="budget_premium">Премиум</string>
    <string name="premium_rub">₽₽₽</string>
    <string name="address_purchase">Адрес доставки</string>
    <string name="add_address">Добавить адрес</string>
    <string name="shop">Магазин</string>
    <string name="next">Далее</string>
    <string name="address_in_item">г. %s,\nул. %s,\nдом %s, подъезд %s, этаж %s, квартира %s</string>

    <string name="products_energy">racEnergy</string>
    <string name="products_power">racPower</string>
    <string name="products_oil">racOil</string>
    <string name="products_other">racOther</string>
    <string name="products_user">userProducts</string>

    <string name="price_two_dots">Цена: %s ₽</string>
    <string name="weight_two_dots">Вес: %s кг</string>

    <string name="proteins_letter">Б</string>
    <string name="fats_letter">Ж</string>
    <string name="carbohydrates_letter">У</string>

    <string name="proteins_value">Белки (%s г)</string>
    <string name="fats_value">Жиры (%s г)</string>
    <string name="carbs_value">Углеводы (%s г)</string>

    <string name="kcal">Ккал:</string>

    <string name="info_pack">Информация о закупке</string>
    <string name="statistic_pack">Сводка потребления питательных веществ</string>

    <string name="people_amount">Количество человек</string>
    <string name="check_pack">Проверьте выбранные параметры</string>
    <string name="take_basket">Подобрать корзину</string>

    <string name="save_and_continue"><u>Сохранить набор и продолжить</u></string>
    <string name="offer_delivery">Оформить доставку</string>

    <!-- ADDRESS -->
    <string name="save">Сохранить</string>
    <string name="delete">Удалить</string>
    <string name="change">Изменить</string>
    <string name="back">Назад</string>

    <!-- SHOPS -->
    <string name="pyaterochka">Пятёрочка</string>
    <string name="perekrestok">Перекрёсток</string>

    <!-- PRODUCT -->
    <string name="description">Описание</string>
    <string name="add_to_cart">В корзину</string>


    <!-- HINTS -->
    <string name="hint_set_title">Введите название…</string>
    <string name="hint_set_name">Введите имя…</string>
    <string name="hint_press">Нажмите</string>
    <string name="hint_street">Улица</string>
    <string name="hint_city">Город</string>
    <string name="hint_building">Дом</string>
    <string name="hint_comment">Комментарий по желанию</string>
    <string name="hint_entrance">Подъезд</string>
    <string name="hint_floor">Этаж</string>
    <string name="hint_flat">Квартира</string>
    <string name="hint_address_title">Название (\"офис\", \"дом\" и т.п.)</string>

    <string name="maxHeight">185</string>

    <!-- KART -->
    <string name="kart">Корзина</string>
    <string name="goods">Товары</string>
    <string name="your_pack">Ваш набор</string>
    <string name="your_choice">Продукты, выбранные Вами</string>
    <string name="weight_of_order">Вес заказа</string>
    <string name="price_of_delivery">Стоимость доставки</string>
    <string name="price_of_order">Общая сумма заказа</string>
    <string name="comment_to_order">Комментарий к заказу</string>
    <string name="payment_variant">Способ оплаты</string>

</resources>