<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.profile.editgroup.EditGroupFragment">

    <com.example.raczakupsecond.view.ToolbarViewProfile
        android:id="@+id/toolbar_edit_group"
        android:layout_width="wrap_content"
        android:layout_height="120dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:scrollbars="none">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"

                android:text="@string/edit_group_groupTitle"
                android:gravity="start|center"
                android:textSize="28sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/editText_edit_group_title"
                android:layout_width="300dp"
                android:layout_height="42dp"

                android:hint="@string/hint_set_title"

                android:maxLines="1"
                android:inputType="text"

                android:paddingHorizontal="16dp"
                android:layout_marginTop="5dp"

                android:textColor="@color/black"
                android:fontFamily="@font/roboto"

                android:background="@drawable/shape_edit_text_search" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp">

                <TextView
                    android:id="@+id/tv_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_gravity="bottom|start"

                    android:text="@string/edit_group_groupMembers"
                    android:gravity="start|center"
                    android:textSize="28sp"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/black"

                    android:layout_weight="1"/>

                <ImageView
                    android:id="@+id/edit_group_addMember"
                    android:layout_width="35dp"
                    android:layout_height="35dp"

                    android:layout_gravity="bottom|end"

                    android:src="@drawable/ic_button_add" />

            </LinearLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_profile_background_for_data_holders"
                android:layout_marginTop="10dp">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rcView_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_margin="20dp"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/tv_packs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="24dp"

                android:text="@string/edit_group_groupPacks"
                android:gravity="start|center"
                android:textSize="28sp"
                android:fontFamily="@font/roboto"
                android:textColor="@color/black" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcView_packs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_edit_group_confirm"
                android:layout_width="200dp"
                android:layout_height="50dp"

                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"

                android:text="@string/edit_group_buttonConfirm"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="14sp"

                android:lineSpacingExtra="5sp"

                android:layout_gravity="center"

                android:background="@drawable/shape_profile_frag_button" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_edit_group_delete"
                android:layout_width="200dp"
                android:layout_height="38dp"

                android:layout_marginTop="0dp"

                android:text="@string/edit_group_buttonDelete"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto_bold"
                android:textSize="14sp"

                android:layout_gravity="center"

                android:background="@drawable/shape_red_button"

                android:layout_marginBottom="32dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>