<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.start.toauth.ToAuthFragment">
    <!--android:background="@drawable/background"-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="-64dp"
        android:layout_marginTop="64dp"

        android:fontFamily="@font/roboto"
        android:text="@string/app_name"

        android:textColor="@color/black"

        android:textSize="48sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="155dp"
        android:layout_height="155dp"

        android:layout_marginStart="20dp"
        android:layout_marginTop="42dp"

        android:src="@drawable/ic_logo_color_rotated"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"

        android:layout_width="300dp"
        android:layout_height="50dp"

        android:text="@string/frag_login_button"
        android:textSize="17sp"
        android:fontFamily="@font/roboto_bold_italic"

        android:layout_marginBottom="24dp"

        android:background="@drawable/shape_toauthfrag_button_login"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_button_fast_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:text="@string/fast_order"
        android:fontFamily="@font/roboto"
        android:textColor="@color/black"
        android:textSize="18sp"

        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_login"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_toauthfrag_arrow_forward"
        app:layout_constraintBottom_toBottomOf="@+id/textView_button_fast_order"
        app:layout_constraintStart_toEndOf="@+id/textView_button_fast_order"
        app:layout_constraintTop_toTopOf="@+id/textView_button_fast_order" />


</androidx.constraintlayout.widget.ConstraintLayout>