<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <TextView
            android:id="@+id/tv_delete_dialog_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"

            android:textSize="22sp"
            android:fontFamily="@font/roboto_italic"
            android:textColor="@color/delete_dialog_text"

            android:text="@string/dialog_delete_group"

            android:gravity="center"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete_dialog_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:layout_marginStart="24dp"
            android:layout_marginBottom="24dp"

            android:textSize="18sp"
            android:fontFamily="@font/roboto_italic"
            android:textColor="@color/white"

            android:background="@drawable/shape_deletedialog_confirm_delete"


            android:text="@string/yes"

            android:gravity="center"

            android:paddingHorizontal="5dp"

            app:layout_constraintTop_toBottomOf="@id/tv_delete_dialog_message"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_delete_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"

            android:textSize="18sp"
            android:fontFamily="@font/roboto_italic"
            android:textColor="@color/white"

            android:background="@drawable/shape_deletedialog_cancel_delete"


            android:text="@string/cancel"

            android:gravity="center"

            android:paddingHorizontal="25dp"

            app:layout_constraintTop_toBottomOf="@id/tv_delete_dialog_message"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>