<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screens.packs.mypacks.MyPacksFragment">

    <RelativeLayout
        android:id="@+id/rl_top_frag_my_packs"
        android:layout_height="82dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_my_packs"
            android:layout_height="82dp"
            android:layout_width="wrap_content"

            android:text="@string/my_packs"
            android:fontFamily="@font/roboto_thin_italic"
            android:textSize="36sp"
            android:textColor="@color/black"

            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"

            android:gravity="start|center"
            android:paddingHorizontal="18dp"
            />

        <ImageView
            android:visibility="gone"

            android:id="@+id/button_toolbar_add_new_pack"
            android:layout_width="50dp"
            android:layout_height="50dp"

            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentTop="true"

            android:layout_marginEnd="24dp"

            android:src="@drawable/ic_button_add" />

    </RelativeLayout>

    <LinearLayout
        android:visibility="visible"

        android:id="@+id/ll_no_packs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"

        android:layout_marginBottom="72dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_top_frag_my_packs">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/roboto_italic"
            android:textColor="@color/black"
            android:textSize="32sp"

            android:gravity="center"

            android:text="@string/no_pack" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_add_new_pack"
            android:layout_width="180dp"
            android:layout_height="50dp"

            android:text="@string/button_new_pack"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_bold"
            android:textSize="14sp"

            android:layout_gravity="center"

            android:layout_marginTop="28dp"
            android:layout_marginBottom="10dp"

            android:background="@drawable/shape_profile_frag_button" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"

        android:id="@+id/rcView_my_packs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_top_frag_my_packs"/>

</androidx.constraintlayout.widget.ConstraintLayout>